<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_addAccount"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_accountName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_accountName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_accountDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_accountDescription" />

    <EditText
        android:id="@+id/edit_accountInitMoney"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_initMoney"
        android:inputType="numberDecimal" />

</LinearLayout>